--- a/app/src/main/res/layout/item_block.xml
+++ b/app/src/main/res/layout/item_block.xml
@@ -7,6 +7,6 @@
         android:id="@+id/item_block_iv_picture"
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:background="#9F2F2F" />
+        android:background="#4FB7E6" />
 
 </LinearLayout>
